--- a/healthbased_llama2_chatbot_testing.ipynb
+++ b/healthbased_llama2_chatbot_testing.ipynb
@@ -19,13 +19,162 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\CoreCom\\Desktop\\GenAI Practice Assignments and Projects\\HealthGPT-Llama2-Project\\HealthGPT-Llama2\\venv\\Lib\\site-packages\\pinecone\\data\\index.py:1: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from tqdm.autonotebook import tqdm\n"
+     ]
+    }
+   ],
+   "source": [
+    "# import the required libraries\n",
+    "from langchain import PromptTemplate\n",
+    "from langchain.chains import RetrievalQA\n",
+    "from langchain.embeddings import HuggingFaceEmbeddings\n",
+    "from langchain.vectorstores import Pinecone\n",
+    "import pinecone\n",
+    "from langchain.document_loaders import PyPDFLoader, DirectoryLoader\n",
+    "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
+    "from langchain.prompts import PromptTemplate\n",
+    "from langchain.llms import CTransformers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import the required libraries\n",
-    "from langchain import PromptTemplate"
+    "# set the pinecone api key and environment\n",
+    "PINECONE_API_KEY = 'pcsk_7QRu18_2knBTs41jL1i2cgxM7TMoEEzGzxhKcVNpSxH1QJsZYuuSkusoF4JHur6HuMopMD'\n",
+    "PINECONE_ENV = ''"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# extract data function create\n",
+    "def extract_health_data(pdf_data):\n",
+    "    loader = DirectoryLoader(pdf_data, glob=\"*.pdf\", loader_cls=PyPDFLoader)\n",
+    "\n",
+    "    documents = loader.load()\n",
+    "\n",
+    "    return documents"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "extracted_health_data = extract_health_data('data/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create chunks of extracted_health_data function\n",
+    "def text_split_chunks(extracted_data):\n",
+    "    text_splitter = RecursiveCharacterTextSplitter(chunk_size  = 500, chunk_overlap = 20)\n",
+    "    text_chunks = text_splitter.split_documents(extracted_data)\n",
+    "\n",
+    "    return text_chunks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Length of extracted pdf data chunks :  5860\n"
+     ]
+    }
+   ],
+   "source": [
+    "# apply function of split text in to chunks also print the length of chunks\n",
+    "text_chunks_return = text_split_chunks(extracted_health_data)\n",
+    "print(\"Length of extracted pdf data chunks : \", len(text_chunks_return))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# function to download embedding model from huggingface\n",
+    "def download_huggingface_embed_model():\n",
+    "    embeddings = HuggingFaceEmbeddings(model_name=\"sentence-transformers/all-MiniLM-L6-v2\")\n",
+    "    return embeddings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\CoreCom\\Desktop\\GenAI Practice Assignments and Projects\\HealthGPT-Llama2-Project\\HealthGPT-Llama2\\venv\\Lib\\site-packages\\huggingface_hub\\file_download.py:142: UserWarning: `huggingface_hub` cache-system uses symlinks by default to efficiently store duplicated files but your machine does not support them in C:\\Users\\CoreCom\\.cache\\huggingface\\hub\\models--sentence-transformers--all-MiniLM-L6-v2. Caching files will still work but in a degraded version that might require more space on your disk. This warning can be disabled by setting the `HF_HUB_DISABLE_SYMLINKS_WARNING` environment variable. For more details, see https://huggingface.co/docs/huggingface_hub/how-to-cache#limitations.\n",
+      "To support symlinks on Windows, you either need to activate Developer Mode or to run Python as an administrator. In order to activate developer mode, see this article: https://docs.microsoft.com/en-us/windows/apps/get-started/enable-your-device-for-development\n",
+      "  warnings.warn(message)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# apply embedding download function and save in embedding variable\n",
+    "embeddings = download_huggingface_embed_model()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "HuggingFaceEmbeddings(client=SentenceTransformer(\n",
+       "  (0): Transformer({'max_seq_length': 256, 'do_lower_case': False}) with Transformer model: BertModel \n",
+       "  (1): Pooling({'word_embedding_dimension': 384, 'pooling_mode_cls_token': False, 'pooling_mode_mean_tokens': True, 'pooling_mode_max_tokens': False, 'pooling_mode_mean_sqrt_len_tokens': False, 'pooling_mode_weightedmean_tokens': False, 'pooling_mode_lasttoken': False, 'include_prompt': True})\n",
+       "  (2): Normalize()\n",
+       "), model_name='sentence-transformers/all-MiniLM-L6-v2', cache_folder=None, model_kwargs={}, encode_kwargs={})"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#print the embeddings\n",
+    "# embeddings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
